# agent-framework-minimal-sql

./: .envexample  .gitignore  LICENSE  README.md  azure.yaml  chainlit.md  custom_oauth.py  disclaimer.txt  eval.ipynb  eval_trace.py  main.py  notebook.ipynb  prompt_config.py  pyproject.toml  rag_tools.py  requirements.txt  tools.py
.chainlit/: config.toml
.chainlit/translations/: en-US.json
config/prompts/: CHANGELOG.md  eval.yaml
config/prompts/backups/20260305-114824/: system.yaml  tools.yaml
config/prompts/overlays/: local.yaml  prod.yaml  staging.yaml
eval/: README.md  generate_and_eval.py  generate_traces.py  prompt_improvement_reviewer.ipynb  results_explorer.ipynb
eval/datasets/: README.md  sql_agent_gold_starter.csv  sql_agent_gold_starter.jsonl
eval/foundry/: README.md  config.yaml  run_eval.py
infra/: README.md  main.tf  main.tfvars.json.example  main.tfvars.json.redeployexample  main.tfvars.json.startexample  outputs.tf  provider.tf  variables.tf
infra/modules/app-service/: main.tf  outputs.tf  variables.tf
infra/modules/managed-identity/: main.tf  outputs.tf  variables.tf
public/: custom.css  login-disclaimer.js
scripts/ralph/: prd.json  progress.txt
sql_queries/: add_user.sql  db_principles.sql
tests/: test_prompt_tools_yaml.py  test_retry_logic.py
