[project]
name = "agent-framework-minimal-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.0.0b251114",
    "azure-ai-agents>=1.2.0b5",
    "chainlit>=2.9.2",
    "pyodbc>=5.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pre-commit>=4.4.0",
]
