[project]
name = "agent-framework-minimal-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.0.0b251114",
    "azure-ai-agents>=1.2.0b5",
    "azure-search-documents>=11.6.0",
    "chainlit>=2.9.2",
    "pyodbc>=5.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.4.0",
    "pytest>=9.0.2",
]
